--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.2
   firebase_core: ^2.22.0
   cloud_firestore: ^4.13.1
+  uuid: ^4.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -76,6 +77,9 @@ flutter:
     - assets/sfx/
 
   fonts:
+    - family: Madimi One
+      fonts:
+        - asset: assets/fonts/Madimi_One/MadimiOne-Regular.ttf
     - family: Permanent Marker
       fonts:
         - asset: assets/fonts/Permanent_Marker/PermanentMarker-Regular.ttf
