--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,17 @@
 {
   "hosting": {
-    "source": ".",
+    "site": "cardon",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "frameworksBackend": {
-      "region": "us-central1"
-    }
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
